 2015-01-31 15:04  egorpugin 
   M src/common/isc_file.cpp
[build] Fix OS X build: removed extra qualification on member Mnt().

 2015-01-30 20:23  egorpugin 
   M examples/CMakeLists.txt
   M src/CMakeLists.txt
   M src/remote/CMakeLists.txt
[build] [cmake] Make 'remote' and 'common' targets private for 'yvalve' target.

 2015-01-30 17:25  alexpeshkoff 
   M src/common/unicode_util.cpp
WIP on CORE-3885: Firebird for Android, fix ICU load

 2015-01-29 15:16  dimitr 
   M src/jrd/btr.cpp
Simplest possible fix for regression CORE-4673: Computed index based on a computed column stores NULL for all its keys.

 2015-01-29 10:47  dimitr 
   M src/dsql/StmtNodes.cpp
Removed the redundant code (accidental copy-paste remaining), thanks to Adriano.

 2015-01-29 10:26  dimitr 
   M src/dsql/StmtNodes.cpp
Fixed CORE-4675: Conditions like WHERE <field> = <cursor>.<field> don't use existing index.

 2015-01-29 07:10  egorpugin 
   M CMakeLists.txt
   M src/CMakeLists.txt
[build] [cmake] Extract ICU and zlib only once.

 2015-01-28 17:12  hvlad 
   M src/utilities/fbsvcmgr/fbsvcmgr.cpp
Correct use of CRT.

 2015-01-28 17:00  alexpeshkoff 
   M src/utilities/fbtracemgr/traceMgrMain.cpp
Fixed a bug introduced by me when working on CORE-3658 3 years ago

 2015-01-28 14:52  egorpugin 
   M src/CMakeLists.txt
[build] [cmake] Set engine12_common target's type to OBJECT (library).

 2015-01-28 09:01  dimitr 
   M src/jrd/jrd.cpp
Fixed my yesterday's commit (forgotten part).

 2015-01-28 08:15  dimitr 
   M src/jrd/EngineInterface.h
   M src/jrd/jrd.cpp
Fixed my yesterday's commit.

 2015-01-27 14:37  egorpugin 
   M CMakeLists.txt
   M builds/cmake/BuildFunctions.cmake
   M builds/cmake/Configure.cmake
   M src/CMakeLists.txt
   M src/include/gen/autoconfig.h.in
Improve Qt+MSVC build. Fix some messages. Crosscompiling improvements (add some defines).

 2015-01-27 10:46  alexpeshkoff 
   M builds/posix/Makefile.in
   M builds/posix/Makefile.in.plugins_examples